Concatenate two data frames

--- a/PANDAS_REFERENCE.ipynb
+++ b/PANDAS_REFERENCE.ipynb
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select multiple rows by index number"
+    "### Select multiple rows by indices or index range"
    ]
   },
   {
@@ -209,9 +209,47 @@
    },
    "outputs": [],
    "source": [
-    "product_descriptions.loc[product_descriptions['product_uid'] == 100001]\n",
-    "product_descriptions.loc[0]\n",
-    "product_descriptions.ix[0]"
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1.loc[df1['a'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Research: Difference between .loc and .ix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1.ix[0]"
    ]
   },
   {
@@ -282,7 +320,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -336,11 +374,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = df.applymap(str)"
+    "df = df1.applymap(str)\n",
+    "type(df[\"a\"][0])"
    ]
   },
   {
@@ -358,7 +397,7 @@
    },
    "outputs": [],
    "source": [
-    "df[\"d\"] = [10, 11, 12]"
+    "df1[\"d\"] = [10, 11, 12]"
    ]
   },
   {
@@ -369,7 +408,7 @@
    },
    "outputs": [],
    "source": [
-    "df"
+    "df1"
    ]
   },
   {
@@ -383,15 +422,72 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(columns=('lib', 'qty1', 'qty2'))\n",
+    "from random import randint\n",
+    "df3 = pd.DataFrame(columns=('lib', 'qty1', 'qty2'))\n",
     "for i in range(5):\n",
     "    df.loc[i] = [randint(-1,1) for n in range(3)]\n",
     "\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add a row [messy: research more]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df2.loc[len(df2)] = [13, 14, 15]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Concatenate two DataFrames](http://pandas.pydata.org/pandas-docs/stable/merging.html#concatenating-objects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pd.concat([df1, df2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Take a sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sample = df1[df1.Categories == 1].sample(n=2)\n",
+    "sample"
    ]
   },
   {
@@ -410,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +526,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -496,7 +592,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -518,73 +614,6 @@
     "\n",
     "[Docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_excel.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "### Take a sample\n",
-    "sample = df1[df1.Categories == 1].sample(n=2)\n",
-    "sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
